--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"anymatch": "^3.1.3",
 		"array-flatten": "^1.1.1",
 		"balanced-match": "^1.0.2",
+		"bcryptjs": "^2.4.3",
 		"binary-extensions": "^2.2.0",
 		"body-parser": "^1.20.1",
 		"brace-expansion": "^1.1.11",
@@ -64,6 +65,7 @@
 		"mime-types": "^2.1.35",
 		"minimatch": "^3.1.2",
 		"ms": "^2.0.0",
+		"multer": "^1.4.5-lts.1",
 		"negotiator": "^0.6.3",
 		"nodemon": "^3.0.3",
 		"nopt": "^1.0.10",
@@ -72,6 +74,7 @@
 		"object-inspect": "^1.13.1",
 		"on-finished": "^2.4.1",
 		"parseurl": "^1.3.3",
+		"path": "^0.12.7",
 		"path-to-regexp": "^0.1.7",
 		"picomatch": "^2.3.1",
 		"prisma": "^5.10.2",
